@@ -292,7 +292,7 @@ static int read_track(MidIStream *stream, MidSong *song, int append)
 {
   MidEventList *meep;
   MidEventList *next, *newlist;
-  sint32 len;
+  sint32 len, next_pos, pos;
   char tmp[4];
 
   meep = song->evlist;
@@ -313,6 +313,7 @@ static int read_track(MidIStream *stream, MidSong *song, int append)
       return -1;
     }
   len=SWAPBE32(len);
+  next_pos = mid_istream_tell(stream) + len;
   if (memcmp(tmp, "MTrk", 4))
     {
       DEBUG_MSG("Corrupt MIDI file.\n");
@@ -326,6 +327,9 @@ static int read_track(MidIStream *stream, MidSong *song, int append)
 
       if (newlist==MAGIC_EOT) /* End-of-track Hack. */
 	{
+	  pos = mid_istream_tell(stream);
+	  if (pos < next_pos)
+	    mid_istream_seek(stream, next_pos - pos, SEEK_CUR);
 	  return 0;
 	}
 
